remove bg image

--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ button {
 }
 
 .header {
-  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url("./assets/bg-image.jpg");
+  background: #fae5d3;
+
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
